<resources>
    <string name="app_name">AbFresh</string>
    <!--    <string name="facebook_app_id">749975465912320</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb749975465912320</string>-->
    <!-- Anagha facebook id-->
    <string name="facebook_app_id">1519596071741278</string>
    <string name="fb_login_protocol_scheme">fb1519596071741278</string>

    <!-- Azaz Anfres facebook id-->
    <!--    <string name="facebook_app_id">177975000458823</string>-->
    <!--    <string name="fb_login_protocol_scheme">fb177975000458823</string>-->

    <string name="yellow_message">Lorem <b>ipsum dolor</b> sit amet, consectetur adipiscing elit</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat,
            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>

    <string name="lorem2">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat,
            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
            Lorem ipsum dolor sit amet, \n  \n  consectetur adipiscing elit,
            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat,
            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat \n \n  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat,
            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="home_second">Home Second</string>
    <string name="small_size">90 ml</string>
    <string name="size_medium">180 ml</string>
    <string name="size_large">375 ml</string>
    <string name="size_xlarge">750 ml</string>
    <string name="size_xxlarge">1 ltr</string>
    <string name="size_xxxlarge">2 ltrL</string>

    <string name="color1">#da4453</string>
    <string name="color2">#FF9800</string>
    <string name="color3">#F6F3EB</string>
    <string name="product_type">Chicken Mutton</string>
    <string name="Grossweight">440g</string>
    <string name="Netweight">350g</string>
    <string name="address">55B kailash Nagar"," post parvati nagar,Nagpur
                \n Maharashtra 440027 India</string>

    <string name="wine">Wine</string>
    <string name="wiskey">Wiskey</string>
    <string name="rum">Rum</string>
    <string name="beer">Beer</string>
    <string name="vodka">Vodka</string>
    <string name="takila">Takila</string>
    <string name="selectpay">Payment Method</string>

    <string name="not_head">Lorem ipsum dolor sit amet</string>
    <string name="not_msg">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="contactus_msg">Tingling fingertips?That\'s magnetic urge\n  to get in touch with us!</string>


    <string name="paypal_small_msg">The safer way to pay just became faster</string>
    <string name="paypal_bold_msg">Set up automatic payment on MeatShop</string>
    <string name="paypal_point_one">1. Once you opt-in via OTP, you can skip \n OTP and CVV future purchase on Meatshop(Valid for purchase under ₹2000,credit cards only)</string>
    <string name="paypal_point_two">2. Your money details and purchases are protected by PayPal</string>
    <string name="paypal_point_three">3. You can manage and cancel automatic payment anytime</string>
    <string name="rec_name">Attrachi Kurumulakittu Vechathu or Malabar Lamb with black peeper</string>
    <string name="rec_name2">Malabar Lamb with black peeper</string>
    <string name="rec_lunch">Lunch</string>
    <string name="rec_breakfast">Dinner</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="lbl_set_profile_photo">Set profile image</string>


    <string name="Refer_heading">Refer friends across cities</string>
    <string name="Refer_heading_second">Your unique referal code is</string>
    <string name="Refer_heading_smsg">Tell a friend they get ₹.200 discount on min order value of ₹.500. You get ₹.200 MeatShop cash</string>


    <string name="app_name_cash">AbFresh Cash</string>
    <string name="app_name_wallet">AbFresh Wallet</string>
    <string name="app_name_wallet_transaction_history">Transaction History</string>
    <string name="app_name_wallet_toolbar">Recharge your Wallet</string>
    <string name="app_name_cash_plus">AbFresh Cash+</string>

    <string name="refer_earn">Tell a friend they get Rs. 200 discount on min order value of Rs. 500, You get Rs. 200 <font color='#323231'><b>ABfresh</b></font> cash</string>
    <string name="status">Status: <font color='#1aac15'><b>Completed</b></font></string>
    <string name="sign_in">New to Ab Fresh? <font color='#ffffff'><b>Sign Up</b></font></string>
    <string name="sign_up">New to Ab Fresh? <font color='#fdcd08'><b>Sign Up</b></font></string>
    <string name="description">Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender the spring Chiken Curry Cuts from Skinless and tender the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from Skinless and tender, the spring Chiken Curry Cuts from</string>
    <string name="Rs">\u20B9</string>
    <string name="pdf_show_local_progress_title">Title</string>
    <string name="pdf_show_local_progress_content">Content</string>
    <string name="pdf_show_online_dialog_title">Title</string>
    <string name="pdf_show_online_dialog_question">Question</string>
    <string name="pdf_show_online_dialog_button_no">No</string>
    <string name="pdf_show_online_dialog_button_yes">Yes</string>


    <string-array name="country_list">
        <item>India</item>
        <item>SriLanka</item>
        <item>Nepal</item>
        <item>Japan</item>
    </string-array>
    <string-array name="city_list">
        <item>Nagpur</item>
        <item>Mumbai</item>
        <item>Pune</item>
        <item>satara</item>
    </string-array>
    <string-array name="state_list">
        <item>Maharashta</item>
        <item>MadhyaPradesh</item>
        <item>Gujrat</item>
        <item>Delhi</item>
    </string-array>


</resources>
