<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/paypal_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_horizontal|center_vertical|center"
        android:background="@android:color/white"
        android:theme="@style/newToolbar"
        app:title=""
        app:titleTextAppearance="@style/ActionBarTextAppearance"
        app:popupTheme="@style/AppTheme.PopupOverlay">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/ord_home_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/action_back"
                android:src="@drawable/newarrow"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="55dp"
                android:layout_toEndOf="@+id/ord_home_btn">
                <TextView
                    android:id="@+id/ord_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="PayPal"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent"
                    android:elevation="@dimen/dimen_10dp"
                    />
            </RelativeLayout>

        </RelativeLayout>
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:text="PayPal"-->
<!--            android:textColor="#fff"-->
<!--            android:textSize="16sp"-->
<!--            android:layout_marginEnd="55dp"-->
<!--            app:titleTextAppearance="@style/ActionBarTextAppearance"-->
<!--            android:gravity="center|center_horizontal|center_vertical"/>-->
    </androidx.appcompat.widget.Toolbar>
<ImageView
    android:id="@+id/paypal_iv"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_below="@+id/paypal_toolbar"
    android:src="@drawable/ic_paypal_vector"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        android:text="@string/paypal_small_msg"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/line"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:text="@string/paypal_bold_msg"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="fill_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textColor="@color/textColorPrimary"
            android:text="@string/paypal_point_one"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="start|center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/textColorPrimary"
            android:text="@string/paypal_point_two"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:gravity="start|center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/textColorPrimary"
            android:text="@string/paypal_point_three"/>
    </LinearLayout>
    <Button
        android:id="@+id/call_dialler"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Link Now"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/falert_white"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/material_size_16"
        android:background="@drawable/button_bg_red"/>
</RelativeLayout>